1st success run

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=SpringBootLearning
+server.port=8070
+
+
+valuefortest=testedvaluetext
+
+# ?????? ????????? ?????? (Data Source)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprbootdb
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+
+# ?????? hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+
+# ??? ?????? put, patch, delete http ??????
+spring.mvc.hiddenmethod.filter.enabled=true
+
